--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         "symfony/yaml": "2.4.*",
         "ext-bcmath": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0",
+        "mikey179/vfsStream": "1.*"
+    },
     "autoload": {
         "psr-4": {
             "CommerceGuys\\Intl\\": "src"
