Add tests for the LocaleResolverTrait.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
             "CommerceGuys\\Intl\\": "src"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "CommerceGuys\\Intl\\Tests\\": "tests"
+        }
+    },
     "authors": [
         {
             "name": "Bojan Zivanovic"
