--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ language: php
 php:
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
 
 install:
+  - composer self-update
   - composer install
-  - mkdir -p build/logs
 
 script:
-  - ./vendor/bin/phpunit -c ./phpunit.xml
+  - ./vendor/bin/phpunit -c ./phpunit.xml --coverage-text --strict
