Add a branch alias.

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
         {
             "name": "Bojan Zivanovic"
         }
-    ]
+    ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
+    }
 }
