--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: php
 
 php:
-  - 5.4
+  - 7.1
+  - 7.0
   - 5.5
-  - 5.6
-  - hhvm
 
 install:
   - composer self-update
   - composer install
 
 script:
-  - ./vendor/bin/phpunit -c ./phpunit.xml --coverage-text --strict
+  - ./vendor/bin/phpunit -c ./phpunit.xml
