--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
-        "mikey179/vfsStream": "1.*"
+        "mikey179/vfsstream": "1.*"
     },
     "autoload": {
         "psr-4": {
