--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "description": "Internationalization library powered by CLDR data.",
     "license": "MIT",
     "require": {
-        "php": ">=5.5.0"
+        "php": ">=7.0.8"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "^6.0",
         "mikey179/vfsstream": "1.*"
     },
     "autoload": {
