--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build-test:
@@ -12,7 +12,7 @@ jobs:
       - uses: php-actions/composer@v6
 
       - name: PHPUnit Tests PHP 7.3
-        uses: php-actions/phpunit@master
+        uses: php-actions/phpunit@v9
         with:
           bootstrap: vendor/autoload.php
           configuration: test/phpunit.xml
@@ -20,7 +20,7 @@ jobs:
           php_version: 7.3
 
       - name: PHPUnit Tests PHP 8.0
-        uses: php-actions/phpunit@master
+        uses: php-actions/phpunit@v9
         with:
           bootstrap: vendor/autoload.php
           configuration: test/phpunit.xml
