--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@master
 
       - uses: php-actions/composer@v6
 
@@ -18,6 +18,7 @@ jobs:
           configuration: test/phpunit.xml
           args: --coverage-text
           php_version: 7.3
+          version: 9
 
       - name: PHPUnit Tests PHP 8.0
         uses: php-actions/phpunit@v9
@@ -26,3 +27,4 @@ jobs:
           configuration: test/phpunit.xml
           args: --coverage-text
           php_version: 8.0
+          version: 9
