--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
           bootstrap: vendor/autoload.php
           configuration: phpunit.xml
           args: --coverage-text
+          php_extensions: bcmath
           php_version: 7.3
           version: 9
 
@@ -26,5 +27,6 @@ jobs:
           bootstrap: vendor/autoload.php
           configuration: phpunit.xml
           args: --coverage-text
+          php_extensions: bcmath
           php_version: 8.0
           version: 9
